--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
     <!-- Encabezado con Logo y Navegación -->
     <header class="header">
-        <img src="{{ url_for('static', filename='images/UniDev_Logo_Text_Only_Transparent.png') }}" alt="UniDev Logo" class="logo">
+        <img src="{{ url_for('static', filename='images/UniDev_Logo.png') }}" alt="UniDev Logo" class="logo">
     </header>
     
     <!-- Menú de Navegación Centralizado -->
@@ -27,10 +27,11 @@
         <a href="/reportes_estadisticas" class="nav-button">Reportes y Estadísticas</a>
         <a href="/auditoria" class="nav-button">Auditoría</a>
     </nav>
-
+<!--
     <a href="/logout" class="logout-btn">
         <span class="material-icons">logout</span> Cerrar sesión
     </a>
+-->
 
     <!-- Contenido principal -->
     <main>
